--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>React App</title>
+    <title>Weather List</title>
   </head>
   <body>
     <noscript>
